[gd_scene format=3 uid="uid://c3osldlh5pfx8"]

[ext_resource type="Script" uid="uid://n8evtfaa8dbx" path="res://scripts/radio.gd" id="1_7h80l"]
[ext_resource type="Texture2D" uid="uid://jxpc2e76ow73" path="res://assets/radio.png" id="2_4b7o3"]
[ext_resource type="AudioStream" uid="uid://cypmo8alcbf30" path="res://assets/audio/cassette_demonic.wav" id="3_7h80l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y83x7"]
radius = 22.0

[node name="Radio" type="Area2D" unique_id=1218966091]
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_7h80l")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1751075348]
y_sort_enabled = true
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_4b7o3")
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2144667805]
shape = SubResource("CircleShape2D_y83x7")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1786723215]
stream = ExtResource("3_7h80l")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
